--- a/apix-sdk-node/package.json
+++ b/apix-sdk-node/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "axios": "^1.13.4"
+    "@types/jsonwebtoken": "^9.0.10",
+    "axios": "^1.13.4",
+    "jsonwebtoken": "^9.0.3"
   }
 }
